creacion de pagina usuario

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -147,7 +147,7 @@
     }
 }
 .container__sliderMain{
-    margin: 3em 0 13em 0;
+    padding: 3em 0 13em 0;
     &-swiper{
         margin-bottom: 4em;
         &-container{
