--- a/src/app/components/index-user/index-user.component.html
+++ b/src/app/components/index-user/index-user.component.html
@@ -1,1 +1,155 @@
-<p>index-user works!</p>
+<header class="container__header">
+    
+    <div class="container__menu">
+      <img class="container__menu-menu" src="../../../assets/responsive/menu-svgrepo-com.svg" alt="">
+    </div>
+    <nav class="header__nav" >
+        <div class="container__header-logo">
+            <img src="../../../assets/index-usuario/logo-index-usuario.png" alt="">
+        </div>
+        <ul class="header__nav-enlaces">
+            <li><a class="header__nav-enlaces-a">inicio</a></li>
+            <li><a class="header__nav-enlaces-a">nuevos videos</a></li>
+            <li><a class="header__nav-enlaces-a">remixes</a></li>
+            <li><a class="header__nav-enlaces-a">generos</a></li>
+            <li><img src="../../../assets/index-usuario/search.svg" alt=""></li>
+        </ul>
+        <div class="container__dropdown">
+            <div class="container__dropdown-dropdown">
+                <button class="container__dropdown-dropdown-btnToggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" (click)="dropdownActive()">
+                    <img src="../../../assets/index-usuario/love.svg" alt="">Mi cuenta
+                </button>
+                <ul class="container__dropdown-dropdown-menu" *ngIf="dropdownMenu">
+                  <li><a class="dropdown-item" href="#"><img src="../../../assets/index-usuario/user-account-profile.svg" alt="">Mi Perfil</a></li>
+                  <li><a class="dropdown-item" href="#"><img src="../../../assets/index-usuario/download.svg" alt="">Descargas</a></li>
+                  <li><a class="dropdown-item" href="#"><img src="../../../assets/index-usuario/credit-card.svg" alt="">Membresia</a></li>
+                  <li><a class="dropdown-item" routerLink="/">Cerrar Cessión</a></li>
+                </ul>
+              </div>
+        </div>
+    </nav>
+  </header>
+  <main>
+    <section class="container__banner"> 
+        <img class="container__banner-image" src="../../../assets/index-usuario/banner-index-usuario.png" alt="">
+    </section>
+    <section class="container__double">
+        <div class="container__double-card">
+            <div >
+                <h2 class="container__double-card-recomendados-title"><img src="../../../assets/index-usuario/star-top10.svg" alt="">Recomendados</h2>
+                <div class="container__double-card-recomendados">
+                    <div class="container__double-card-recomendados-song" *ngFor="let song of listaSong">
+                        <div class="container__double-card-recomendados-song-first">
+                            <img class="container__double-card-recomendados-song-first-image" src={{song.image}} alt="" >
+                            <div class="container__double-card-recomendados-song-first-container">
+                                <p>{{song.autor}}</p>
+                                <h4>{{song.nombre}}</h4>
+                                <p>{{song.subtitulo}}</p>
+                            </div>
+                        </div>
+                        <div class="container__double-card-recomendados-song-second">
+                            <h5>{{song.genero}}</h5>
+                            <p>{{song.puntaje}}</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div >
+                <h2 class="container__double-card-recomendados-title"><img src="../../../assets/index-usuario/star-top10.svg" alt="">Recomendados</h2>
+                <div class="container__double-card-recomendados">
+                    <div class="container__double-card-recomendados-song" *ngFor="let song of listaSong">
+                        <div class="container__double-card-recomendados-song-first">
+                            <img class="container__double-card-recomendados-song-first-image" src={{song.image}} alt="" >
+                            <div class="container__double-card-recomendados-song-first-container">
+                                <p>{{song.autor}}</p>
+                                <h4>{{song.nombre}}</h4>
+                                <p>{{song.subtitulo}}</p>
+                            </div>
+                        </div>
+                        <div class="container__double-card-recomendados-song-second">
+                            <h5>{{song.genero}}</h5>
+                            <p>{{song.puntaje}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container__list">
+        <div class="container__list-song-head">
+            <ul class="container__list-song-head-ul">
+                <li>Fecha</li>
+                <li>Remixer</li>
+                <li>Artista</li>
+                <li>Tema</li>
+                <li>Version</li>
+                <li>BPM</li>
+                <li>Genero</li>
+                <li>Prev/Descarga/D</li>
+            </ul>
+        </div>
+        <div class="container__list-song" *ngFor="let item of songsList | paginate: { itemsPerPage: 20, currentPage: numberPage}" >
+            <div class="container__list-song-card">
+                <div class="container__list-song-card-item">
+                    <p>{{item.fecha}}</p>
+                </div>
+                <div class="container__list-song-card-item">
+                    <img src={{item.remixerLogo}} alt="">
+                </div>
+                <div class="container__list-song-card-item">
+                    <p>{{item.artista}}</p>
+                </div>
+                <div class="container__list-song-card-item">
+                    <p>{{item.tema}}</p>
+                </div>
+                <div class="container__list-song-card-item">
+                    <p>{{item.version}}</p>
+                </div>
+                <div class="container__list-song-card-item">
+                    <p>{{item.bpm}}</p>
+                </div>
+                <div class="container__list-song-card-item">
+                    <p>{{item.genero}}</p>
+                </div>
+                <div class="container__list-song-card-item">
+                    <img src={{item.descarga}} alt="">
+                </div>
+            </div>
+            
+        </div>
+        <div class="container__list-pagination">
+            <!-- <pagination-controls class="container__list-pagination-pagination" (pageChange)="numberPage = $event">
+
+            </pagination-controls> -->
+            <pagination-template class="container__list-pagination-pagination" #p="paginationApi"
+                    (pageChange)="numberPage = $event"
+                    (pageBoundsCorrection)="pageBoundsCorrection.emit($event)">
+
+                     <div class="pagination-previous container__list-pagination-pagination-pagina" [class.disabled]="p.isFirstPage()" [ngClass]="{'container__list-pagination-pagination-pagina': p.isFirstPage() === false}">
+                        <a *ngIf="!p.isFirstPage()" (click)="p.previous()"> < </a>
+                    </div>
+            
+                    <div class="container__button-pagination" *ngFor="let page of p.pages" [class.current]="p.getCurrent() === page.value">
+                        <a class="container__list-pagination-pagination-pagina" (click)="p.setCurrent(page.value)" *ngIf="p.getCurrent() !== page.value">
+                            {{ page.label }}
+                        </a>
+                        <div class="container__list-pagination-pagination-pagina-active " *ngIf="p.getCurrent() === page.value">
+                            {{ page.label }}
+                        </div>
+                    </div>
+            
+                    <div class="pagination-next " [class.disabled]="p.isLastPage()" [ngClass]="{'container__list-pagination-pagination-pagina': p.isLastPage() === false}" >
+                        <a *ngIf="!p.isLastPage()" (click)="p.next()"> > </a>
+                    </div>
+                    <div>
+                    </div>
+            </pagination-template>
+        </div>
+        
+    </section>
+  </main>
+  <section class="container__footer">
+    <app-footer></app-footer>
+  </section>
+  
