--- a/src/app/components/modal-acceso/modal-acceso.component.html
+++ b/src/app/components/modal-acceso/modal-acceso.component.html
@@ -8,7 +8,7 @@
               <input class="contacto__formulario-formulario-campos"type="text" placeholder="Email">
               <input class="contacto__formulario-formulario-campos" type="text" placeholder="Contraseña">
               <p class="contacto__formulario-formulario-passwordP">Olvidé mi contraseña</p>
-              <button class="contacto__formulario-formulario-btn" >Acceder</button>
+              <button class="contacto__formulario-formulario-btn" routerLink="/usuario" (click)="closeModalAcceso()">Acceder</button>
               <div class="container__registrate">
                 <h4 class="contacto__formulario-formulario-registrate">¿Eres nuevo?</h4>
                 <h4 class="contacto__formulario-formulario-registrate contacto__formulario-formulario-registrate-registrate">Resgistrate</h4>
