--- a/src/app/components/index-user/index-user.component.scss
+++ b/src/app/components/index-user/index-user.component.scss
@@ -41,6 +41,7 @@ h1,h2,h3,h4,h5,p{
             text-transform: uppercase;
             justify-content: center;
             padding: 0;
+            position: relative;
             li{
                 font-size: 1em;
                 display: flex;
@@ -62,11 +63,9 @@ h1,h2,h3,h4,h5,p{
                     color: #fff;
                     text-align: inherit;
                     line-height: 25.6px;
-                    word-spacing: 0px;
-                    letter-spacing: 0px;
-                    font-weight: 600;
-                    font-style: normal;
-                    font-size: 16px;
+                    letter-spacing: 1px;
+                    font-weight: 100;
+                    font-size: 17px;
                 }
                 ::after{
                     content: "";
@@ -118,8 +117,8 @@ h1,h2,h3,h4,h5,p{
                     position: relative;
                     img{
                         padding-right: 0.3em;
-                        width: 1.5em;
-                        height: 1.5em;
+                        width: 31px;
+                        height: 27px;
                     }
                 }
                 &-menu{
@@ -131,8 +130,8 @@ h1,h2,h3,h4,h5,p{
                         background: #575757;
                         img{
                             background: transparent;
-                            width: 1.8em;
-                            height: 1.8em;
+                            width: 29px;
+                            height: 27px;
                             padding-right: 0.5em;
                         }
                         a{
@@ -189,9 +188,14 @@ h1,h2,h3,h4,h5,p{
                 text-transform: uppercase;
                 align-items: center;
                 img{
-                    width: 1.2em;
-                    height: 1.2em;
+                    width: 53px;
+                    height: 30px;
                     background: transparent;
+                    margin-right: 0.7em;
+                }
+                .image-top10{
+                    width: 29px;
+                    height: 28px;
                 }
             }
             &-song{
@@ -205,8 +209,8 @@ h1,h2,h3,h4,h5,p{
                     background: #1a1a1a;
                     align-items: center;
                     img{
-                        width: 5em;
-                        height: 5em;
+                        width: 58px;
+                        height: 57px;
                         background: #1a1a1a;
                     ;
                     }
@@ -226,6 +230,33 @@ h1,h2,h3,h4,h5,p{
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
+                }
+                &-three{
+                    background: #1a1a1a;
+                    padding: 0.6em 3em 0.6em 0;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    flex-direction: row;
+                    align-items: center;
+                    img:nth-child(1){
+                        width: 18px;
+                        height: 25px;
+                        background: transparent;
+                    }:nth-child(2){
+                        width: 26px;
+                        height: 27px;
+                        background: transparent;
+                        margin: 0 0.7em;
+                    }
+                    :nth-child(3){
+                        width: 27px;
+                        height: 22px;
+                        background: transparent;
+                    }
+                    :hover{
+                        cursor: pointer;
+                    }
                 }
             }
             &::-webkit-scrollbar{
@@ -259,9 +290,14 @@ h1,h2,h3,h4,h5,p{
             background: #2c2c2c;
             width: 80%;
             padding: 0;
+            text-align: center;
             li{
-                padding: 1.1em 0.5em;
+                padding: 1.5em 0em;
                 background: #2c2c2c;
+                
+            }
+            :first-child{
+                padding-left: 8em;
             }
         }
     }
@@ -277,11 +313,86 @@ h1,h2,h3,h4,h5,p{
             background: #2c2c2c;
             margin: 0.2em 0;
             padding: 0.3em 0;
+            text-align: center;
             &-item{
                 background: #2c2c2c;
                 padding: 0 0.5em;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                flex-direction: column;
+                img{
+                    width: 73px;
+                    height: 72px;
+                }
+                &-fecha{
+                    display: flex;
+                    align-items: center;
+                    background: transparent;
+
+                    img:nth-child(1){
+                        width: 27px;
+                        height: 36px;
+                        background: transparent;
+                        padding: 0 0.5em;
+                    }
+                    img:nth-child(2){
+                        width: 31px;
+                        height: 31px;
+                        background: transparent;
+                        padding: 0 0.5em;
+                    }
+                    p{
+                        background: #2c2c2c;
+                        padding: 0 0.5em;
+                    }
+                }
                 p{
                     background: #2c2c2c;
+                    font-weight: 500;
+                }
+                
+                
+            }
+            &-item-previoDescarga{
+                display: flex;
+                background: transparent;
+                justify-content: center;
+                .puntoVerdeTabla{
+                    width: 7px;
+                    height: 6px;
+                }
+                img:nth-child(1){
+                    width: 18px;
+                    height: 25px;
+                    background: transparent;
+                }
+                :nth-child(2){
+                    width: 26px;
+                    height: 27px;
+                    margin: 0 0.6em;
+                    background: transparent;
+                }
+                :nth-child(3){
+                    width: 27px;
+                    height: 22px;
+                    background: transparent;
+                }
+                
+            }
+            .previoDescarga__botonera{
+                background: transparent;
+                justify-content: center;
+                display: flex;
+                margin-right: 0.5em;
+                margin-top: 0.5em;
+                justify-content: space-between;
+                img{
+                    width: 7px;
+                    height: 6px;
+                }
+                :nth-child(2){
+                    margin: 0 0.1em;
                 }
             }
         }
@@ -309,6 +420,12 @@ h1,h2,h3,h4,h5,p{
     a{
         background-color: transparent;
     }
+    &:hover{
+        background-color: #fff;
+        color: #000;
+        font-weight: bold;
+        cursor: pointer;
+    }
 }
 .container__list-pagination-pagination-pagina-active{
     background: rgb(255, 255, 255);
@@ -327,4 +444,74 @@ h1,h2,h3,h4,h5,p{
 }
 .container__footer{
     padding-top: 5em;
+}
+.container__submenu-remixes{
+    position: absolute;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    width: 40%;
+    background: #585858;
+    border-top: 2px solid #ff3000;
+    top: 4.2em;
+    padding: 0.5em;
+    &-remixes{
+        cursor: pointer;
+        ul{
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            padding: 0;
+            background: #6f6f6f;
+            margin: 0;
+            li{
+                font-family: 'MonumentExtended_Regular';
+                font-weight: 100;
+                font-size: 0.9em;
+                background: transparent;
+                padding: 0.5em;
+            }
+            :nth-child(2){
+                padding-left: 0.5em;
+                background: transparent;
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 330px) and (max-width: 576px){
+    .container__header{
+        .container__menu{
+            display: flex;
+            align-self: self-end;
+        }
+        .header__nav{
+            position: initial;
+            flex-direction: column;
+            .container__header-logo{
+                display: none;
+            }
+            .header__nav-enlaces{
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                li:last-child{
+                    order: -1;
+                }
+            }
+        }
+    }
+    .container__double{
+        .container__double-card{
+            display: flex;
+            grid-template-columns:none;
+            height: auto;
+            flex-direction: column;
+            .container__double-card-recomendados-title{
+                font-size: 1.1em;
+            }
+        }
+    }
+    
 }
