--- a/src/app/components/index-user/index-user.component.scss
+++ b/src/app/components/index-user/index-user.component.scss
@@ -493,28 +493,14 @@ h1,h2,h3,h4,h5,p{
                                 background: transparent;
                                 position: absolute;
                                 right: 0;
+                                top: 0;
+                                bottom: 0;
                             }
                         }
                     }
                 }
-            }
+    }
 }
-   
-// .container__button-pagination{
-//     display: flex;
-//     justify-content: space-around;
-//     margin: 0 0.3em;
-//     cursor: pointer;
-//     .container__list-pagination-pagination-pagina{
-//         background: #ff3100;
-//         padding: 0.5em 0.8em;
-//         border-radius: 200%;
-//         color: #fff;
-//         font-weight: 400;
-//     }
-// }
-
-
 .container__footer{
     padding-top: 5em;
 }
@@ -562,8 +548,11 @@ h1,h2,h3,h4,h5,p{
         .container__menu{
             display: flex;
             align-self: self-end;
+            padding: 0.5em;
             img{
                 justify-content: flex-end;
+                width: 3.2em;
+                height: 3.2em;
             }
         }
         .header__nav{
@@ -582,9 +571,40 @@ h1,h2,h3,h4,h5,p{
                 }
             }
             .container__submenu-remixes {
-                width: auto;
+                width: 100%;
                 grid-template-columns: repeat(2, 1fr);
+                z-index: 9999;
+                .container__submenu-remixes-close{
+                    grid-column: 1/3;
+                    justify-self: end;
+                    margin-right: 2em;
+                    background: transparent;
+                    img{
+                        display: flex;
+                        width: 2em;
+                        height: 2em;
+                        background: transparent;
+                    }
+                }
             }
+            .container__dropdown{
+                height: 62px;
+                background: #0e0e0e;
+                box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+                .container__dropdown-dropdown-btnToggle{
+                    background-color: #0e0e0e;
+                    img{
+                        background: #0e0e0e;
+                    }
+                }
+            }
+        }
+    }
+    .container__banner{
+        border-top: 2px solid #fff;
+        .container__banner-image{
+            width: 100%;
+            height: 10em;
         }
     }
     .container__double{
@@ -626,15 +646,13 @@ h1,h2,h3,h4,h5,p{
             &-item-fecha{
                 flex-direction: column;
                 margin-bottom: 1em;
-                img:nth-child(1){
-                    padding-right: 3em;
-                    padding-bottom: 1em;
+                &-estampas{
+                    background: transparent;
+                    img{
+                        padding: 0.7em;
+                    }
                 }
-                img:nth-child(2){
-                    position: absolute;
-                    left: 10em;
-                    padding-top: 5px;
-                }
+                
             }
             
         }
@@ -646,16 +664,20 @@ h1,h2,h3,h4,h5,p{
                 display: none;
             }
         }
-    }
-    .container__list-nav{
         .container__list-pagination{
-            width: auto;
-            flex-direction: column;
-            align-items: center;
-            .container__list-pagination-pagesCount{
-                position: initial;
-                margin-top: 1.2em;
+            .container__list-pagination-pagination{
+                .container__list-pagination-pagination-template{
+                    .container__list-pagination-pagination-pagina{
+                        .pagination__nav{
+                            display: none!important;
+                            p{
+                                display: none!important;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
+    
 }
