--- a/src/app/components/index-user/index-user.component.scss
+++ b/src/app/components/index-user/index-user.component.scss
@@ -572,12 +572,15 @@ h1,h2,h3,h4,h5,p{
             }
             .container__submenu-remixes {
                 width: 100%;
-                grid-template-columns: repeat(2, 1fr);
+                grid-template-columns: repeat(1, 1fr);
                 z-index: 9999;
+                padding: 0;
+                border-bottom: 2px solid #ff3000;
                 .container__submenu-remixes-close{
-                    grid-column: 1/3;
+                    grid-column: 1/2;
                     justify-self: end;
                     margin-right: 2em;
+                    margin-top: 0.5em;
                     background: transparent;
                     img{
                         display: flex;
@@ -588,15 +591,10 @@ h1,h2,h3,h4,h5,p{
                 }
             }
             .container__dropdown{
+                position: absolute;
+                top: 5px;
+                left: 5px;
                 height: 62px;
-                background: #0e0e0e;
-                box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-                .container__dropdown-dropdown-btnToggle{
-                    background-color: #0e0e0e;
-                    img{
-                        background: #0e0e0e;
-                    }
-                }
             }
         }
     }
